--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "package": "ncc build --minify --license licenses.txt",
-    "all": "npm run build && npm run package"
+    "clean": "rimraf dist lib",
+    "package": "ncc build --license licenses.txt",
+    "all": "npm run clean && npm run build && npm run package"
   },
   "repository": {
     "type": "git",
@@ -15,10 +16,15 @@
     "setup"
   ],
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "docker-modem": "^3.0.8",
+    "shlex": "^2.1.2"
   },
   "devDependencies": {
+    "@types/docker-modem": "^3.0.2",
     "@vercel/ncc": "^0.36.1",
+    "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
