--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -29,7 +29,7 @@ jobs:
           - image: i386/ubuntu:bionic
           
     steps:
-      - name: Executing CIEmu
+      - name: Running CIEmu Action - Getting started
         uses: ciemu/action@v0
         env: 
           CIEMU_IMAGE: ${{ matrix.image }}
